# phys-autodiff

./: CMakeLists.txt  README.md  REQUIREMENT.md  main.cpp
docs/: BENCHMARK_REPORT.md  PLAN_FUSED_PHYS_LOSS.md  PLAN_MLP_SMOKE_INTEGRATION.md
include/: backend.h  mlp.h  mlp_grid.h  phys.h
src/: mlp_cpu.cpp  mlp_cuda.cu  mlp_grid.cpp  phys_cpu.cpp  phys_cuda_fused.cu  phys_cuda_nonfused.cu
test/: test_mlp_compare.cpp  test_mlp_grid_infer.cpp  test_mlp_phys_integration_inputs.cpp  test_mlp_phys_perf.cpp  test_phys_cpu_ref.cpp  test_phys_cuda_fused_vs_nonfused.cpp  test_phys_cuda_nonfused_vs_cpu.cpp  test_phys_perf.cpp
